White Space issue resolved in Mobile View

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden !important;
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
